PSP/examenPsp-AdrianSaavedra/RestExamen-AdrianSaavedra/src/main/java/org/example/restexamenadriansaavedra/common/errors/AlreadyExists.java
package org.example.restexamenadriansaavedra.common.errors;

public class AlreadyExists extends RuntimeException{
    public AlreadyExists(String message) {
        super(message);
    }
}
